<resources>
    <string name="app_name">StoryApp</string>

    <string name="log_title">Are you ready to share your story?</string>
    <string name="log_subtitle">Enter your data first</string>
    <string name="login">Login</string>

    <string name="reg_title">Complete your data below</string>
    <string name="register">Register</string>

    <string name="welcome_title">Hello There!</string>
    <string name="welcome_body">Want to learn Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Just code it!</string>


    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>

    <string name="language">Language</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="created_at">15–10–2003</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="submit">Submit</string>
</resources>